[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orby-coder"
version = "0.1.0"
description = "Orby Coder - An open-source AI CLI tool for coding and development with IDE integration"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Orby Project Contributors"}]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.80.0",
    "ollama>=0.3.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    "GitPython>=3.1.0",
    "watchdog>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/jaskirat1616/OrbyCoder"
Repository = "https://github.com/jaskirat1616/OrbyCoder.git"

[project.scripts]
orby = "orby_coder.__main__:main"
orbycoder = "orby_coder.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orby_coder*"]